# pulsedeck

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  settings.gradle.kts
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: premiumdeck_tinyrec_v1.manifest.json  premiumdeck_tinyrec_v1.tflite
app/src/main/cpp/: CMakeLists.txt  JniBridge.cpp  NativeAudioEngine.cpp  NativeAudioEngine.h
app/src/main/res/drawable/: iconoir_activity.xml  iconoir_album_list.xml  iconoir_antenna_signal.xml  iconoir_bell_notification.xml  iconoir_book_stack.xml  iconoir_bookmark.xml  iconoir_bright_star.xml  iconoir_calendar.xml  iconoir_chat_bubble.xml  iconoir_check.xml  iconoir_clock_rotate_right.xml  iconoir_cloud_download.xml  iconoir_compact_disc.xml  iconoir_compass.xml  iconoir_control_slider.xml  iconoir_edit_pencil.xml  iconoir_empty_box.xml  iconoir_filter.xml  iconoir_flask.xml  iconoir_folder.xml  iconoir_forward.xml  iconoir_group.xml  iconoir_headset.xml  iconoir_heart.xml  iconoir_info_circle.xml  iconoir_input_output.xml  iconoir_label.xml  (+36 more)
docs/: EXPORT_SCOPE.md  LICENSE_DECISION.md  PUBLISH_CHECKLIST.md
gradle/: libs.versions.toml
tools/: audio_thread_safety_scan.ps1  audio_thread_safety_scan.sh  gradle_audio_build_checks.ps1  gradle_audio_build_checks.sh
tools/tinyrec/: README.md  requirements.txt  train_tinyrec.py
windowsApp/: PLAN.md  README.md  build.gradle.kts  settings.gradle.kts
(+154 files in other folders)
